// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RiskAnalysisFormSection testing > should be render correclty with description and error 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      />
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <div
          class="css-1okj3ks-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-sidenav css-z6k39g-MuiTypography-root"
          >
            Test title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
          >
            Test description
          </span>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Test children for snapshot
        </p>
      </div>
    </section>
  </div>
</body>
`;

exports[`RiskAnalysisFormSection testing > should be render correclty with description and without error 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      />
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <div
          class="css-1okj3ks-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-sidenav css-z6k39g-MuiTypography-root"
          >
            Test title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
          >
            Test description
          </span>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Test children for snapshot
        </p>
      </div>
    </section>
  </div>
</body>
`;

exports[`RiskAnalysisFormSection testing > should be render correclty with error and without description 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      />
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <div
          class="css-1okj3ks-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-sidenav css-z6k39g-MuiTypography-root"
          >
            Test title
          </span>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Test children for snapshot
        </p>
      </div>
    </section>
  </div>
</body>
`;

exports[`RiskAnalysisFormSection testing > should be render correclty without description and error 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      />
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <div
          class="css-1okj3ks-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-sidenav css-z6k39g-MuiTypography-root"
          >
            Test title
          </span>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Test children for snapshot
        </p>
      </div>
    </section>
  </div>
</body>
`;
